TP fonctionne avec API account et API client, il reste la table des conseillers à rajouter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,24 +5,23 @@ server.address=0.0.0.0
 server.http2.enabled=true
 server.port=8000
 
-# ParamÃ©trage de la source de donnÃ©es
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/account
+# Paramétrage de la source de données
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.username=postgres
-spring.datasource.password=B@nLgU4qz*9?D~3n83
+spring.datasource.password=afpa
 
-# ParamÃ©trage de l'ORM
+# Paramétrage de l'ORM (Hibernate)
 spring.jpa.show-sql=true
-
-# DÃ©sactive la gÃ©nÃ©ration nautomatique de tables par Hibernate
-# DDL -> Data Definition Language
+# Désactive la génération automatique de tables par Hibernate (DDL)
 spring.jpa.hibernate.ddl-auto=none
-# Choix du schÃ©ma par dÃ©faut
+
+# Choix du schéma par défaut (assurez-vous que "public" est bien votre schéma)
 spring.jpa.properties.hibernate.default_schema=public
 
-# Activation de l'encodage ansi pour obtenir les couleurs en terminal Windows
+# Activation de l'encodage ANSI pour obtenir les couleurs en terminal Windows
 spring.output.ansi.enabled=always
 
-# On rÃ¨gle le niveau de log sur TRACE pour la sÃ©curitÃ© (JUSTE POUR LE DEBUG)
+# Réglage du niveau de log sur TRACE pour la sécurité (juste pour le debug)
 logging.level.org.springframework.security.web=TRACE
 
 
